# esgaliant

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  profile.html  pyproject.toml
docs/: conf.py
esgaliant/: __init__.py
notebooks/: base_cell.ipynb  cellcensus.ipynb
src/esgaliant/: __init__.py
src/esgaliant/base_cell/: __init__.py  base_cell.py
src/esgaliant/cell_agents/: __init__.py  generate_cells.py  generate_tissue.py
src/esgaliant/cell_classes/: __init__.py  cells.py
src/esgaliant/io/: __init__.py  cellcensus.ipynb  io_foundation.py  io_store.py  zarr.py
src/esgaliant/visualization/: view_base_cells.py
tests/: conftest.py
