[project]
name = "Esgaliant"
version = "0.1.0"
description = "Requirement for all analysis related to the Esgaliant package"
readme = "README.md"
authors = [
    {name = "Patrick C.N. Martin", email = "patrick.martin@cshs.org"}
]
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.11.4",
    "dask>=2025.7.0",
    "dask-ml>=2025.1.0",
    "distributed>=2025.7.0",
    "ipykernel>=6.30.1",
    "jax>=0.7.2",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "leidenalg>=0.10.2",
    "memory-profiler>=0.61.0",
    "microbench>=0.9.1",
    "mlflow>=3.4.0",
    "numba>=0.62.0",
    "numpy>=2.1.3",
    "polars>=1.31.0",
    "pynndescent>=0.5.13",
    "pytest>=8.4.2",
    "scanpy>=1.11.4",
    "sklearn-ann>=0.1.3",
    "torch>=2.7.1",
    "umap>=0.1.1",
    "zarr>=3.0.0",
    "zstd>=1.5.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "bump-my-version>=0.26.0",
]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "esgaliant/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "Version {current_version}"
replace = "Version {new_version}"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
]
